compiler/testData/checkerWithErrorTypes/quick/backingField/ReadNonexistentDeclaredInHigher.jet
val y = 1

class A() {
    {
        val x = <!UNRESOLVED_REFERENCE!>$y<!>
    }
}
